@@ -2461,5 +2461,6 @@ $_LANG['ICN'] = 'Dow. os.';
 $_LANG['Option'] = 'Opcja';
 $_LANG['by date'] = 'wg daty';
 $_LANG['Select date type'] = 'Wybierz typ daty';
+$_LANG['in debt above 100%'] = 'zadłużeni ponad 100%';
 
 ?>
