@@ -35,6 +35,7 @@
 					<OPTION VALUE="4"{if $listdata.state eq 4} SELECTED{/if}>{t}deleted<!plural>{/t}</OPTION>
 					<OPTION VALUE="5"{if $listdata.state eq 5} SELECTED{/if}>{t}disconnected<!plural>{/t}</OPTION>
 					<OPTION VALUE="6"{if $listdata.state eq 6} SELECTED{/if}>{t}in debt{/t}</OPTION>
+					<OPTION VALUE="11"{if $listdata.state eq 11} SELECTED{/if}>{t}in debt above 100%{/t}</OPTION>
 					<OPTION VALUE="7"{if $listdata.state eq 7} SELECTED{/if}>{t}online{/t}</OPTION>
 					<OPTION VALUE="8"{if $listdata.state eq 8} SELECTED{/if}>{t}without group{/t}</OPTION>
 					<OPTION VALUE="9"{if $listdata.state eq 9} SELECTED{/if}>{t}without tariff{/t}</OPTION>
