@@ -214,6 +214,7 @@
 				<OPTION VALUE="4">{t}deleted<!plural>{/t}</OPTION>
 				<OPTION VALUE="5">{t}disconnected<!plural>{/t}</OPTION>
 				<OPTION VALUE="6">{t}in debt{/t}</OPTION>
+				<OPTION VALUE="11">{t}in debt above 100%{/t}</OPTION>
 				<OPTION VALUE="7">{t}online{/t}</OPTION>
 				<OPTION VALUE="8">{t}without group{/t}</OPTION>
 				<OPTION VALUE="9">{t}without tariff{/t}</OPTION>
