@@ -29,6 +29,7 @@
 							    <OPTION value="3" CHECKED>{t}connected<!plural>{/t}</OPTION>
 							    <OPTION value="5">{t}disconnected<!plural>{/t}</OPTION>
 							    <OPTION value="6">{t}in debt{/t}</OPTION>
+							    <OPTION VALUE="11">{t}in debt above 100%{/t}</OPTION>
 							    <OPTION value="2">{t}waiting{/t}</OPTION>
 							    <OPTION value="1">{t}interested<!plural>{/t}</OPTION>
 							    <OPTION value="-1">{t}without nodes{/t}</OPTION>
